# Members-registry-API

./: .gitignore  pyproject.toml
app/: main.py
app/api/routes/: contribution.py  member.py  promotion.py  statuses.py
app/core/: config.py
app/crud/: crud_contribution.py  crud_member.py  crud_promotion.py  crud_statuses.py
app/db/: session.py
app/exceptions/: http_exceptions.py
app/models/: __init__.py  contribution.py  ir.py  level.py  major.py  member.py  member_role.py  member_status.py  member_training.py  promotion.py  role.py  role_type.py  school.py  status.py  trainer.py  training.py  training_type.py
app/schemas/: __init__.py  contribution.py  ir.py  member.py  promotion.py  role.py  status.py  training.py
docker/: .env.example  Dockerfile  compose.yml  entrypoint.sh
docs/: documentation.md  uml_diagram.puml
migrations/: env.py
src/models/: member.py
